challenges/challenge-3/chaosmesh/chaosmesh-dashboard-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ing-chaosmesh
  namespace: chaos-testing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: #{HOSTNAME}#
      http:
        paths:
          - path: /dashboard
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
          - path: /static(/|$)(.*)
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
          - path: /api/common(/|$)(.*)
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
          - path: /api/experiments(/|$)(.*)
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
          - path: /api/events(/|$)(.*)
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
          - path: /api/archives(/|$)(.*)
            backend:
              serviceName: chaos-dashboard
              servicePort: 2333
